--- a/app/src/main/res/layout/class_layout.xml
+++ b/app/src/main/res/layout/class_layout.xml
@@ -7,9 +7,9 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="508dp"
-        android:layout_height="85dp"
-        android:backgroundTint="#07000000"
+        android:layout_width="@dimen/button_width_large"
+        android:layout_height="@dimen/button_height_large"
+        android:backgroundTint="@color/semi_transparent_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,9 +17,9 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="508dp"
-        android:layout_height="75dp"
-        android:backgroundTint="#07000000"
+        android:layout_width="@dimen/button_width_large"
+        android:layout_height="@dimen/button_height_medium"
+        android:backgroundTint="@color/semi_transparent_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,13 +29,13 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#000000"
+        android:shadowColor="@color/black"
         android:shadowDx="6"
         android:shadowDy="4"
         android:shadowRadius="4"
-        android:text="U-PLAN"
-        android:textColor="#d22031"
-        android:textSize="55sp"
+        android:text="@string/u_plan_title"
+        android:textColor="@color/brand_red"
+        android:textSize="@dimen/text_size_display"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -44,25 +44,26 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="@dimen/image_view_icon_width"
+        android:layout_height="@dimen/image_view_icon_height"
+        android:layout_marginStart="@dimen/spacing_small"
+        android:layout_marginTop="@dimen/spacing_small"
+        android:contentDescription="@string/university_logo_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/UT_Spartans_wordmark" />
 
     <WebView
-        android:layout_width="62dp"
-        android:layout_height="57dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/webview_width"
+        android:layout_height="@dimen/webview_height"
+        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="8dp" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="417dp"
-        android:layout_height="426dp"
+        android:layout_width="@dimen/image_view_flowchart_width"
+        android:layout_height="@dimen/image_view_flowchart_height"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,13 +75,13 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#000000"
+        android:shadowColor="@color/black"
         android:shadowDx="4"
         android:shadowDy="4"
         android:shadowRadius="4"
-        android:text="Math Major Flowchart "
-        android:textColor="#d22031"
-        android:textSize="30sp"
+        android:text="@string/math_major_flowchart_title"
+        android:textColor="@color/brand_red"
+        android:textSize="@dimen/text_size_headline"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
