--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#FFFFFF"
+    android:backgroundTint="@color/white"
     tools:context=".BlankFragment">
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:contentDescription="University Logo"
+        android:layout_width="@dimen/image_view_logo_size"
+        android:layout_height="@dimen/image_view_logo_size"
+        android:contentDescription="@string/university_logo_description"
         android:src="@drawable/UT_Spartans_wordmark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,13 +24,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#000000"
+        android:shadowColor="@color/black"
         android:shadowDx="6"
         android:shadowDy="4"
         android:shadowRadius="4"
-        android:text="U-PLAN"
-        android:textColor="#d22031"
-        android:textSize="55sp"
+        android:text="@string/u_plan_title"
+        android:textColor="@color/brand_red"
+        android:textSize="@dimen/text_size_display"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -39,12 +39,12 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="278dp"
-        android:layout_height="61dp"
-        android:backgroundTint="#d22031"
-        android:text="Sign Up"
-        android:textColor="#FFF"
-        android:textSize="25sp"
+        android:layout_width="@dimen/button_width_regular"
+        android:layout_height="@dimen/button_height_regular"
+        android:backgroundTint="@color/brand_red"
+        android:text="@string/sign_up"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,12 +52,12 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="278dp"
-        android:layout_height="61dp"
-        android:backgroundTint="#d22031"
-        android:text="Login"
-        android:textColor="#FFF"
-        android:textSize="25sp"
+        android:layout_width="@dimen/button_width_regular"
+        android:layout_height="@dimen/button_height_regular"
+        android:backgroundTint="@color/brand_red"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_button"
         tools:layout_editor_absoluteX="65dp"
         tools:layout_editor_absoluteY="510dp" />
 
