--- a/app/src/main/res/layout/studentprofile.xml
+++ b/app/src/main/res/layout/studentprofile.xml
@@ -10,9 +10,9 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="508dp"
-        android:layout_height="85dp"
-        android:backgroundTint="#07000000"
+        android:layout_width="@dimen/button_width_large"
+        android:layout_height="@dimen/button_height_large"
+        android:backgroundTint="@color/semi_transparent_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,13 +22,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#000000"
+        android:shadowColor="@color/black"
         android:shadowDx="6"
         android:shadowDy="4"
         android:shadowRadius="4"
-        android:text="U-PLAN"
-        android:textColor="#d22031"
-        android:textSize="55sp"
+        android:text="@string/u_plan_title"
+        android:textColor="@color/brand_red"
+        android:textSize="@dimen/text_size_display"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -40,8 +40,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Graduation Date"
-        android:textSize="20sp"
+        android:text="@string/select_graduation_date"
+        android:textSize="@dimen/text_size_subhead"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.485"
@@ -51,8 +51,8 @@
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar5"
-        android:layout_width="406dp"
-        android:layout_height="309dp"
+        android:layout_width="@dimen/bottom_app_bar_width_small"
+        android:layout_height="@dimen/bottom_app_bar_height_large"
         android:layout_gravity="bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
@@ -71,16 +71,16 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="409dp"
+        android:layout_width="@dimen/bottom_app_bar_width_large"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/spacing_small"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="100dp" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar2"
-        android:layout_width="408dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/bottom_app_bar_width_medium"
+        android:layout_height="@dimen/bottom_app_bar_height_small"
         android:layout_gravity="bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -89,16 +89,16 @@
 
     <Spinner
         android:id="@+id/spinner2"
-        android:layout_width="409dp"
+        android:layout_width="@dimen/bottom_app_bar_width_large"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/spacing_small"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="182dp" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar3"
-        android:layout_width="408dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/bottom_app_bar_width_medium"
+        android:layout_height="@dimen/bottom_app_bar_height_small"
         android:layout_gravity="bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -108,8 +108,8 @@
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar4"
-        android:layout_width="409dp"
-        android:layout_height="96dp"
+        android:layout_width="@dimen/bottom_app_bar_width_large"
+        android:layout_height="@dimen/bottom_app_bar_height_medium"
         android:layout_gravity="bottom"
         android:layout_marginBottom="44dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -121,8 +121,8 @@
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Are you a graduate student?"
+        android:layout_marginStart="@dimen/fragment_horizontal_margin"
+        android:text="@string/graduate_student_prompt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -132,39 +132,40 @@
         android:id="@+id/switch2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Are you a transfer student?"
+        android:layout_marginStart="@dimen/fragment_horizontal_margin"
+        android:text="@string/transfer_student_prompt"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="638dp" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="@dimen/image_view_icon_width"
+        android:layout_height="@dimen/image_view_icon_height"
+        android:layout_marginStart="@dimen/spacing_small"
+        android:layout_marginTop="@dimen/spacing_small"
+        android:contentDescription="@string/university_logo_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/UT_Spartans_wordmark" />
 
     <WebView
-        android:layout_width="62dp"
-        android:layout_height="57dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/webview_width"
+        android:layout_height="@dimen/webview_height"
+        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="8dp" />
 
     <Button
         android:id="@+id/login"
-        android:layout_width="188dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/button_width_small"
+        android:layout_height="@dimen/button_height_small"
         android:layout_gravity="start"
-        android:layout_marginBottom="8dp"
-        android:backgroundTint="#d22031"
+        android:layout_marginBottom="@dimen/spacing_medium"
+        android:backgroundTint="@color/brand_red"
         android:enabled="false"
-        android:text="See graduation plan"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:text="@string/see_graduation_plan"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_caption"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -172,15 +173,15 @@
 
     <Button
         android:id="@+id/login3"
-        android:layout_width="188dp"
-        android:layout_height="39dp"
+        android:layout_width="@dimen/button_width_small"
+        android:layout_height="@dimen/button_height_small"
         android:layout_gravity="start"
-        android:layout_marginBottom="8dp"
-        android:backgroundTint="#d22031"
+        android:layout_marginBottom="@dimen/spacing_medium"
+        android:backgroundTint="@color/brand_red"
         android:enabled="false"
-        android:text="Find your advisor"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:text="@string/find_your_advisor"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_caption"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.928"
