--- a/app/src/main/res/layout/fragment_advising_info.xml
+++ b/app/src/main/res/layout/fragment_advising_info.xml
@@ -9,8 +9,8 @@
     <Button
         android:id="@+id/header_bg"
         android:layout_width="0dp"
-        android:layout_height="85dp"
-        android:backgroundTint="#07000000"
+        android:layout_height="@dimen/button_height_large"
+        android:backgroundTint="@color/semi_transparent_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,13 +19,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="#000000"
+        android:shadowColor="@color/black"
         android:shadowDx="6"
         android:shadowDy="4"
         android:shadowRadius="4"
-        android:text="U-PLAN"
-        android:textColor="#d22031"
-        android:textSize="55sp"
+        android:text="@string/u_plan_title"
+        android:textColor="@color/brand_red"
+        android:textSize="@dimen/text_size_display"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,10 +33,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="@dimen/image_view_icon_width"
+        android:layout_height="@dimen/image_view_icon_height"
+        android:layout_marginStart="@dimen/spacing_small"
+        android:layout_marginTop="@dimen/spacing_small"
+        android:contentDescription="@string/university_logo_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/UT_Spartans_wordmark" />
@@ -44,7 +45,7 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/fragment_vertical_margin"
         app:layout_constraintBottom_toTopOf="@+id/back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,15 +54,15 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:padding="@dimen/fragment_horizontal_margin">
 
             <TextView
                 android:id="@+id/advising_steps_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Advising Steps Overview"
-                android:textColor="#d22031"
-                android:textSize="24sp"
+                android:text="@string/advising_steps_overview_title"
+                android:textColor="@color/brand_red"
+                android:textSize="@dimen/text_size_title"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -70,9 +71,9 @@
                 android:id="@+id/advising_steps_content"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="1. Log into Workday to check for holds.\n2. Review your degree audit.\n3. Schedule an appointment with your advisor.\n4. Prepare a list of potential classes.\n5. Meet with your advisor and get cleared for registration."
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/spacing_medium"
+                android:text="@string/advising_steps_content"
+                android:textSize="@dimen/text_size_body_1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/advising_steps_title" />
@@ -80,8 +81,8 @@
             <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="24dp"
+                android:layout_height="@dimen/divider_height"
+                android:layout_marginTop="@dimen/spacing_large"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintTop_toBottomOf="@id/advising_steps_content" />
 
@@ -89,10 +90,10 @@
                 android:id="@+id/advisor_contact_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Advisor Contact Info"
-                android:textColor="#d22031"
-                android:textSize="24sp"
+                android:layout_marginTop="@dimen/spacing_large"
+                android:text="@string/advisor_contact_info_title"
+                android:textColor="@color/brand_red"
+                android:textSize="@dimen/text_size_title"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider" />
@@ -101,9 +102,9 @@
                 android:id="@+id/advisor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Name: Dr. John Smith"
-                android:textSize="18sp"
+                android:layout_marginTop="@dimen/spacing_medium"
+                android:text="@string/advisor_name"
+                android:textSize="@dimen/text_size_body_2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/advisor_contact_title" />
 
@@ -111,9 +112,9 @@
                 android:id="@+id/advisor_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Email: jsmith@ut.edu"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:text="@string/advisor_email"
+                android:textSize="@dimen/text_size_body_1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/advisor_name" />
 
@@ -121,9 +122,9 @@
                 android:id="@+id/advisor_office"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Office: Plant Hall 123"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:text="@string/advisor_office"
+                android:textSize="@dimen/text_size_body_1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/advisor_email" />
 
@@ -132,13 +133,13 @@
 
     <Button
         android:id="@+id/back_button"
-        android:layout_width="188dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#d22031"
-        android:text="Back"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:layout_width="@dimen/button_width_small"
+        android:layout_height="@dimen/button_height_small"
+        android:layout_marginBottom="@dimen/fragment_vertical_margin"
+        android:backgroundTint="@color/brand_red"
+        android:text="@string/back"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_caption"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
