--- a/app/src/main/res/layout/fragment_advising_info.xml
+++ b/app/src/main/res/layout/fragment_advising_info.xml
@@ -6,41 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".AdvisingInfoFragment">
 
-    <Button
-        android:id="@+id/header_bg"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/button_height_large"
-        android:backgroundTint="@color/semi_transparent_black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:shadowColor="@color/black"
-        android:shadowDx="6"
-        android:shadowDy="4"
-        android:shadowRadius="4"
-        android:text="@string/u_plan_title"
-        android:textColor="@color/brand_red"
-        android:textSize="@dimen/text_size_display"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/image_view_icon_width"
-        android:layout_height="@dimen/image_view_icon_height"
-        android:layout_marginStart="@dimen/spacing_small"
-        android:layout_marginTop="@dimen/spacing_small"
-        android:contentDescription="@string/university_logo_description"
-        app:layout_constraintStart_toStartOf="parent"
+    <include
+        android:id="@+id/reusable_header"
+        layout="@layout/reusable_header"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/UT_Spartans_wordmark" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -49,7 +20,7 @@
         app:layout_constraintBottom_toTopOf="@+id/back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header_bg">
+        app:layout_constraintTop_toBottomOf="@id/reusable_header">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
