--- a/app/src/main/res/layout/class_layout.xml
+++ b/app/src/main/res/layout/class_layout.xml
@@ -17,6 +17,7 @@
         android:layout_width="@dimen/button_width_large"
         android:layout_height="@dimen/button_height_medium"
         android:backgroundTint="@color/semi_transparent_black"
+        android:contentDescription="@string/math_major_flowchart_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +34,7 @@
         android:id="@+id/imgMajorPath"
         android:layout_width="@dimen/image_view_flowchart_width"
         android:layout_height="@dimen/image_view_flowchart_height"
+        android:contentDescription="@string/math_major_flowchart_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
