--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_blankFragment3_to_loginFragment"
             app:destination="@id/LoginScreen" />
+        <action
+            android:id="@+id/action_StartingScreen_to_signupFragment"
+            app:destination="@id/signupFragment" />
     </fragment>
     <fragment
         android:id="@+id/ClassLayout"
@@ -32,13 +35,19 @@
         android:id="@+id/StudentProfile"
         android:name="com.vanarsdale.makinganav.StudentProfileFragment"
         android:label="student_profile"
-        tools:layout="@layout/studentprofile" >
+        tools:layout="@layout/fragment_studentprofile" >
         <action
             android:id="@+id/action_StudentLayout_to_ClassLayout3"
             app:destination="@id/ClassLayout" />
         <action
             android:id="@+id/action_StudentProfile_to_AdvisingInfo"
             app:destination="@id/AdvisingInfo" />
+        <action
+            android:id="@+id/action_StudentProfile_to_how_To_Use"
+            app:destination="@id/how_To_Use" />
+        <action
+            android:id="@+id/action_StudentProfile_to_FAQ_Resources"
+            app:destination="@id/FAQ_Resources" />
     </fragment>
     <fragment
         android:id="@+id/AdvisingInfo"
@@ -50,5 +59,16 @@
         android:name="com.vanarsdale.makinganav.FAQ_Resources"
         android:label="fragment_f_a_q__resources"
         tools:layout="@layout/fragment_f_a_q__resources" />
+    <fragment
+        android:id="@+id/how_To_Use"
+        android:name="com.vanarsdale.makinganav.How_To_Use"
+        android:label="fragment_how__to__use"
+        tools:layout="@layout/fragment_how__to__use" />
+
+    <fragment
+        android:id="@+id/signupFragment"
+        android:name="com.vanarsdale.makinganav.ui.signup.signupFragment"
+        android:label="Sign Up"
+        tools:layout="@layout/fragment_signup" />
 
 </navigation>
